--- a/Styles/style.css
+++ b/Styles/style.css
@@ -37,6 +37,16 @@ body {
     color: white;
     cursor: pointer;
 }
+.live-button:hover {
+    background-color: red;
+    width: 100px;
+}
+.transfer-button {
+     background-color: rgb(0, 0, 0);
+     border: none;
+     color: white;
+     text-align: center;
+}
 .sidebar {
     background-color: rgb(0, 2, 0);
     width: 200px;
@@ -56,6 +66,9 @@ body {
         font-weight: 700;
         text-align: center;
     
+}
+.side-button:hover {
+    background-color: red;
 }
 .textex {
     margin-top: 10px;
